[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cruel_Question.gd" type="Script" id=1]
[ext_resource path="res://Images/Backdrop.jpg" type="Texture" id=2]
[ext_resource path="res://Cruel_Theme.tres" type="Theme" id=3]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=4]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Backdrop" type="Sprite" parent="."]
position = Vector2( 510.559, 296.631 )
scale = Vector2( 0.535, 0.56 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 50.0
margin_top = 90.0
margin_right = 974.0
margin_bottom = 390.0
rect_min_size = Vector2( 924, 300 )
theme = ExtResource( 3 )
text = "Sample Text"
autowrap = true

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 100.0
margin_top = 492.0
margin_right = 924.0
margin_bottom = 592.0
rect_min_size = Vector2( 824, 100 )
theme = ExtResource( 4 )
custom_constants/hseparation = 4
columns = 2

[node name="Button" type="Button" parent="GridContainer"]
margin_right = 410.0
margin_bottom = 100.0
rect_min_size = Vector2( 410, 100 )
text = "Correct"

[node name="Button2" type="Button" parent="GridContainer"]
margin_left = 414.0
margin_right = 824.0
margin_bottom = 100.0
rect_min_size = Vector2( 410, 100 )
text = "Incorrect"

[node name="GridContainer2" type="GridContainer" parent="."]
margin_left = 50.0
margin_right = 985.0
margin_bottom = 80.0
rect_min_size = Vector2( 924, 80 )
theme = ExtResource( 4 )
custom_constants/vseparation = 0
custom_constants/hseparation = 650
columns = 2

[node name="Lives" type="Label" parent="GridContainer2"]
visible = false
margin_right = 112.0
margin_bottom = 59.0
text = "Lives:"

[node name="Score" type="Label" parent="GridContainer2"]
visible = false
margin_left = 762.0
margin_right = 885.0
margin_bottom = 59.0
text = "Score:"

[node name="GridContainer3" type="GridContainer" parent="."]
margin_left = 170.0
margin_top = 3.0
margin_right = 1003.0
margin_bottom = 83.0
theme = ExtResource( 4 )
custom_constants/vseparation = 0
custom_constants/hseparation = 750
columns = 2

[node name="Lives_Marker" type="Label" parent="GridContainer3"]
visible = false
margin_right = 24.0
margin_bottom = 59.0
text = "0"

[node name="Score_Marker" type="Label" parent="GridContainer3"]
visible = false
margin_left = 774.0
margin_right = 774.0
margin_bottom = 59.0
[connection signal="ready" from="." to="." method="_on_Node_ready"]
[connection signal="pressed" from="GridContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_Button2_pressed"]
